@@ -8,7 +8,6 @@
 #include "include/core/SkImage.h"
 #include "include/core/SkSurface.h"
 #include "src/core/SkAutoPixmapStorage.h"
-#include "src/gpu/GrContextPriv.h"
 
 #include "tests/Test.h"
 #include "tests/TestUtils.h"
@@ -195,9 +194,8 @@ static void gpu_tests(GrContext* context, skiatest::Reporter* reporter, const Te
         GrBackendTexture backendTex;
 
         if (fullInit) {
-            backendTex = context->priv().createBackendTexture(&nativeExpected, 1,
-                                                              GrRenderable::kNo,
-                                                              GrProtected::kNo);
+            backendTex = context->createBackendTexture(&nativeExpected, 1,
+                                                       GrRenderable::kNo, GrProtected::kNo);
         } else {
             backendTex = context->createBackendTexture(kSize, kSize, test.fColorType,
                                                        SkColors::kWhite, GrMipMapped::kNo,
