@@ -7,10 +7,7 @@
 
 #include "src/core/SkAutoPixmapStorage.h"
 #include "src/gpu/GrContextPriv.h"
-#include "src/gpu/GrGpu.h"
 #include "src/gpu/GrImageInfo.h"
-#include "src/gpu/GrSurfaceContext.h"
-#include "src/gpu/SkGr.h"
 #include "tests/Test.h"
 #include "tests/TestUtils.h"
 
@@ -42,8 +39,8 @@ void testing_only_texture_test(skiatest::Reporter* reporter, GrContext* context,
 
         fill_pixel_data(kWidth, kHeight, expectedPixels.writable_addr32(0, 0));
 
-        backendTex = context->priv().createBackendTexture(&expectedPixels, 1,
-                                                          renderable, GrProtected::kNo);
+        backendTex = context->createBackendTexture(&expectedPixels, 1,
+                                                   renderable, GrProtected::kNo);
     } else {
         backendTex = context->createBackendTexture(kWidth, kHeight, ct, SkColors::kTransparent,
                                                    mipMapped, renderable, GrProtected::kNo);
