@@ -101,20 +101,8 @@ void fill_pixel_data(int width, int height, GrColor* data) {
 bool create_backend_texture(GrContext* context, GrBackendTexture* backendTex,
                             const SkImageInfo& ii, const SkColor4f& color,
                             GrMipMapped mipMapped, GrRenderable renderable) {
-    // TODO: use the color-init version of createBackendTexture once Metal supports it.
-#if 0
     *backendTex = context->createBackendTexture(ii.width(), ii.height(), ii.colorType(),
                                                 color, mipMapped, renderable);
-#else
-    SkBitmap bm;
-    bm.allocPixels(ii);
-    sk_memset32(bm.getAddr32(0, 0), color.toSkColor(), ii.width() * ii.height());
-
-    SkASSERT(GrMipMapped::kNo == mipMapped);
-    *backendTex = context->priv().createBackendTexture(&bm.pixmap(), 1, renderable,
-                                                       GrProtected::kNo);
-#endif
-
     return backendTex->isValid();
 }
 
